z-index fixes and modernizr

--- a/assets/scss/generic/_reset.scss
+++ b/assets/scss/generic/_reset.scss
@@ -47,5 +47,7 @@ table {
 }
 
 *, *:before, *:after {
-  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
  }
