--- a/assets/scss/objects/_navigation.scss
+++ b/assets/scss/objects/_navigation.scss
@@ -19,7 +19,7 @@
 	margin-left: .65em;
 }
 
-.site-header__logo:hover, .nav-toggle:hover {
+.no-touch .site-header__logo:hover, .no-touch .nav-toggle:hover {
 	color: gray;
 }
 
